fixed menu z-index problem

--- a/lexicon-client/src/org/palaso/languageforge/public/onlinetool.css
+++ b/lexicon-client/src/org/palaso/languageforge/public/onlinetool.css
@@ -670,7 +670,7 @@ div-no-hide {
 .main_top_menu_group {
 	margin-left: 300px;
 	margin-bottom: 0px !important;
-	z-index: 1;
+	z-index: 3;
 	position: absolute;
 	padding-top: 10px;
 }
